# voxstudio

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json  pyproject.toml
apps/cli/src/: io.ts  main.test.ts  main.ts
apps/cli/src/commands/: chat.test.ts  chat.ts  config.test.ts  config.ts  devices.test.ts  devices.ts  listen.test.ts  listen.ts  profiles.test.ts  profiles.ts  reply.test.ts  reply.ts  say.test.ts  say.ts  studio.test.ts  studio.ts  transcribe.test.ts  transcribe.ts  voices.test.ts  voices.ts
apps/cli/tests/: test_voices.py
apps/cli/voxcli/: __main__.py
apps/cli/voxcli.egg-info/: PKG-INFO  entry_points.txt  requires.txt
apps/cli/voxcli/commands/: __init__.py  chat.py  say.py  transcribe.py  voices.py
apps/mcp/: package.json
apps/mcp/src/: main.ts  server.test.ts  server.ts
apps/mcp/tools/: measure-agent-voice.ts
apps/realtime-gateway/: README.md  package.json
apps/realtime-gateway/src/: index.ts  library.test.ts  library.ts  main.ts  openai-realtime.test.ts  openai-realtime.ts  protocol.ts  server.test.ts  server.ts  session.ts
apps/realtime-gateway/tools/: live-replay.ts  measure-etiquette.ts  measure-guardrails.ts  measure-library.ts  measure-mcp.ts  measure-openai-adapter.ts  measure-tools.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  conversation.ts  i18n.ts  index.css  store.ts
apps/web/src/components/: VoicePicker.tsx
apps/web/src/lib/: api.ts  audio.test.ts  audio.ts  client.test.ts  client.ts
apps/web/src/panels/: ConversationPanel.tsx  GeneratePanel.tsx  LibraryPanel.tsx  PlaceholderPanel.tsx  SettingsPanel.tsx  VoicesPanel.tsx
core/: pyproject.toml
core/tests/: test_audio.py  test_clients.py  test_config.py  test_synth.py  test_text.py
core/voxcore/: __init__.py  audio.py  config.py  errors.py  health.py  http.py  sinks.py  synth.py  text.py
core/voxcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/voxcore/clients/: __init__.py  asr.py  llm.py  tts.py
docs/: agent-voice-mcp.md  avatar-from-image.md  chunking.md  competitive-voice-agents.md  conversation-etiquette.md  duplex-audio-architecture.md  engine-registry.md  lipsync-bridge.md  mcp-tools.md  openai-realtime-adapter.md  product-runtime.md  public-demo.md  rd-report-2026-07.html  technical-report.html  technical-report.md  tool-loop.md  voice-studio-control.md  web-studio.md
engines/funasr/: README.md  com.voxstudio.funasr-asr.plist.example  funasr-asr.service  pyproject.toml  server_funasr.py
engines/funasr/tests/: test_server.py
engines/kokoro/: README.md  com.voxstudio.kokoro-tts.plist.example  pyproject.toml  server_kokoro.py
engines/kokoro/tests/: test_server.py
engines/llamacpp/: README.md  com.voxstudio.gemma-llm.plist.example
engines/moss-transcribe/: README.md  com.voxstudio.moss-transcribe.plist.example  moss-transcribe.service  pyproject.toml  server_moss.py
engines/moss-transcribe/tests/: test_server_moss.py
engines/parakeet/: README.md
engines/voxcpm2-server/: README.md  continuations.py  fingerprint.py  opus_stream.py  prompt_caches.py  pyproject.toml  requirements.txt  runtime.py  server_voxcpm2.py  voxcpm2-tts.service
engines/voxcpm2-server/tests/: test_continuations.py  test_fingerprint.py  test_opus.py  test_prompt_caches.py  test_runtime.py
fixtures/audio/: cases.json
fixtures/config/: cases.json
fixtures/contracts/: chat-content.json  errors.json  transcripts.json
fixtures/orchestration/: stream.json
fixtures/text/: chunks.json  estimate.json  sanitize.json
surfaces/cli/voxcli/: __init__.py  _io.py
surfaces/cli/voxcli.egg-info/: SOURCES.txt  top_level.txt
surfaces/cli/voxcli/commands/: chat.py  health.py  say.py
tools/: README.md  asr_metrics.py  benchmark_longform_asr.py  build-report.ts  compare_asr.py  ensure-silero-model.ts  ensure-web-assets.ts  measure_speech_rates.py  measure_timbre_drift.py  probe_spelled_out.py  report-style.css  voxkit.py
tools/tests/: test_asr_metrics.py  test_benchmark_longform_asr.py  test_voxkit.py
