[project]
name = "voxcore"
version = "0.1.0"
description = "voxstudio orchestration core: OpenAI-compatible ASR/LLM/TTS clients, chunking, voice profiles"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.24",
    "soundfile>=0.12",
    "pyyaml>=6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voxcore*"]

[dependency-groups]
dev = ["pytest>=8"]
