[project]
name = "voxcli"
version = "0.1.0"
description = "voxstudio command-line app"
requires-python = ">=3.10"
dependencies = ["voxcore"]

[project.scripts]
vox = "voxcli.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voxcli*"]

[dependency-groups]
dev = ["pytest>=8"]
