[project]
name = "funasr-server"
version = "0.1.0"
description = "OpenAI-compatible HTTP adapter for FunASR utterance transcription"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "funasr>=1.2",
    "python-multipart>=0.0.9",
    "torch>=2.3",
    "torchaudio>=2.3",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
