[project]
name = "moss-transcribe-server"
version = "0.1.0"
description = "OpenAI-compatible HTTP adapter for moss-transcribe.cpp"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
