[project]
name = "voxcpm2-server"
version = "0.1.0"
description = "OpenAI-compatible HTTP server for VoxCPM2 (PyTorch, 48kHz)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "voxcpm>=2.0.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "soundfile>=0.12",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    # torch arrives via voxcpm, but pin it: it is the ABI-critical, multi-GB
    # dependency, and this is the version the service is validated against.
    # The default PyPI linux wheel is already a CUDA 13 build (nvidia-cudnn-cu13),
    # which is what sz-ws runs -- no download.pytorch.org index needed.
    "torch==2.12.0",
    "torchaudio==2.11.0",
]

# ffmpeg must be on PATH (reference-audio transcoding); it is not a Python package.

[tool.uv]
package = false
